[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.7.0"
bson = { version = "2", features = [
    "chrono-0_4",
] } # Needed for using chrono datetime in doc
serde = "1" # Used in the Map Data into Structs section
csv = "1.3"
actix-web = "4.3.1"
actix-multipart = "0.6.1"


[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
